--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -73,9 +73,9 @@
 }
 
 .sbb-card {
-  display: block;
+  display: flex;
+  flex-direction: column;
   position: relative;
-  overflow: hidden;
   width: 100%;
   height: 100%;
   padding-inline: var(--sbb-card-padding-inline);
