--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -76,6 +76,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
   width: 100%;
   height: 100%;
   padding-inline: var(--sbb-card-padding-inline);
