--- a/src/components/sbb-tooltip-trigger/sbb-tooltip-trigger.scss
+++ b/src/components/sbb-tooltip-trigger/sbb-tooltip-trigger.scss
@@ -16,8 +16,6 @@
   @include sbb.button-reset;
 
   display: flex;
-  min-width: var(--sbb-size-icon-ui-small);
-  min-height: var(--sbb-size-icon-ui-small);
   cursor: pointer;
 
   &:focus-visible {
@@ -35,4 +33,9 @@
       color: var(--sbb-tooltip-background-hover);
     }
   }
+}
+
+sbb-icon {
+  min-width: var(--sbb-size-icon-ui-small);
+  min-height: var(--sbb-size-icon-ui-small);
 }
