--- a/src/components/sbb-journey-summary/sbb-journey-summary.scss
+++ b/src/components/sbb-journey-summary/sbb-journey-summary.scss
@@ -7,6 +7,7 @@
 .sbb-journey-summary {
   @include sbb.text-s--regular;
 
+  color: var(--sbb-color-iron-default);
   display: flex;
   flex-direction: column;
 }
@@ -19,8 +20,12 @@
   @include sbb.ellipsis;
 
   margin-block-start: 0;
-  margin-block-end: var(--sbb-spacing-fixed-1x);
+  margin-block-end: 0;
   padding-inline-start: 0;
+}
+
+.sbb-journey-summary__date {
+  margin-block-end: var(--sbb-spacing-fixed-1x);
 }
 
 .sbb-journey-summary__via {
