fix: let text be selectable

--- a/src/global/styles/mixins/card.scss
+++ b/src/global/styles/mixins/card.scss
@@ -108,6 +108,7 @@
     inset: 0;
     border: var(--sbb-border-width-2x) solid var(--sbb-card-border-color);
     border-radius: var(--sbb-card-border-radius);
+    pointer-events: none;
   }
 
   &:focus-visible {
