--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -7,6 +7,7 @@
 :host {
   // Overwrites logo in slotted and default case
   --sbb-logo-height: #{sbb.px-to-rem-build(16)};
+  --sbb-header-position: 0;
 
   @include sbb.mq($from: medium) {
     --sbb-logo-height: #{sbb.px-to-rem-build(20)};
@@ -20,8 +21,8 @@
   position: fixed;
   inset: 0 0 auto;
   background: var(--sbb-color-white-default);
-  transform: translateY(0);
   z-index: 10;
+  transform: translateY(var(--sbb-header-position));
 
   &.sbb-header--animated {
     transition: all var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
