--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -27,6 +27,8 @@
   --sbb-navigation-height: 100vh;
   --sbb-navigation-width: 100%;
   --sbb-navigation-expanded-width: 100%;
+  --sbb-navigation-inset: 0 auto auto 0;
+  --sbb-navgation-transform: translateX(-100%);
   --sbb-navigation-content-transform: translateX(0);
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
 
@@ -50,18 +52,22 @@
   }
 }
 
-:host(.sbb-navigation--opened) {
+:host([data-state='opened']) {
   --sbb-navigation-animation-easing: ease-out;
 }
 
-:host(.sbb-navigation--opened),
-:host(.sbb-navigation--opening) {
+:host(:is([data-state='opened'], [data-state='opening'])) {
   --sbb-navigation-backdrop-visibility: visible;
   --sbb-navigation-backdrop-pointer-events: all;
   --sbb-navigation-backdrop-color: var(--sbb-color-black-alpha-70);
 }
 
-:host(.sbb-navigation--has-navigation-section) {
+:host(:not([data-state='closed'])) {
+  --sbb-navigation-inset: 0;
+  --sbb-navgation-transform: translateX(0);
+}
+
+:host([data-has-navigation-section]) {
   --sbb-navigation-content-transform: translateX(-100%);
 
   @include sbb.mq($from: 'large') {
@@ -79,15 +85,11 @@
 
   padding-inline: 0;
   position: fixed;
-  inset-inline-start: 0;
-  inset-block-start: 0;
+  inset: var(--sbb-navigation-inset);
   pointer-events: none;
   overflow: hidden;
   z-index: 10;
-
-  :host(:not(.sbb-navigation-section--closed)) & {
-    inset: 0;
-  }
+  transform: var(--sbb-navgation-transform);
 
   @include sbb.mq($from: large) {
     padding-inline: var(--sbb-layout-base-offset-responsive);
@@ -100,7 +102,7 @@
       visibility: var(--sbb-navigation-backdrop-visibility);
       pointer-events: var(--sbb-navigation-backdrop-pointer-events);
       position: fixed;
-      inset: 0;
+      inset: var(--sbb-navigation-inset);
       background-color: var(--sbb-navigation-backdrop-color);
     }
   }
@@ -147,7 +149,7 @@
     }
   }
 
-  :host(.sbb-navigation--closing) & {
+  :host([data-state='closing']) & {
     pointer-events: none;
     animation-name: close;
   }
