--- a/src/global/styles/typography.scss
+++ b/src/global/styles/typography.scss
@@ -1,6 +1,9 @@
+@use './core/font-face';
 @use './mixins/layout';
 @use './mixins/lists';
 @use './mixins/typo';
+
+@include font-face.font-declarations;
 
 html {
   @include typo.text;
