--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -32,6 +32,11 @@
     padding-inline-start: var(--sbb-navigation-section-content-padding-inline-start);
   }
 
+  // Always place the sbb-button on a new row
+  ::slotted(sbb-button) {
+    grid-column-start: 1;
+  }
+
   @include sbb.mq($from: large) {
     --sbb-navigation-section-column: 5 / 9;
     --sbb-navigation-section-animation-duration: var(--sbb-animation-duration-4x);
