fix: add fallbacks of CSS stretch property

--- a/src/global/styles/mixins/helpers.scss
+++ b/src/global/styles/mixins/helpers.scss
@@ -6,6 +6,8 @@
 
 @mixin stretch($property) {
   #{$property}: 100%;
+  #{$property}: -webkit-fill-available;
+  #{$property}: -moz-available;
   #{$property}: stretch;
 }
 
