--- a/src/components/sbb-clock/sbb-clock.scss
+++ b/src/components/sbb-clock/sbb-clock.scss
@@ -13,6 +13,9 @@
 }
 
 .sbb-clock {
+  @include sbb.stretch('width');
+  @include sbb.stretch('height');
+
   position: relative;
   width: 100%;
   height: 100%;
@@ -21,14 +24,12 @@
   contain: content;
 }
 
+.sbb-clock__face,
 .sbb-clock__hand-hours,
 .sbb-clock__hand-minutes,
 .sbb-clock__hand-seconds {
   position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   transform-origin: center center;
   transform: rotateZ(0deg);
   transform-style: preserve-3d;
