--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -17,8 +17,8 @@
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
   --sbb-navigation-section-width: 100%;
 
-  // We need to handle here the placement within the grid, since the host is exposed to the parent's grid (sbb-navigation)
-
+  // We need to handle here the placement and styling within the grid, since the host
+  // is exposed to the parent's grid (sbb-navigation)
   display: none;
   pointer-events: var(--sbb-navigation-section-pointer-events);
   position: var(--sbb-navigation-section-position);
@@ -64,20 +64,19 @@
   }
 }
 
-:host(.sbb-navigation-section--opened) {
+:host([data-state='opened']) {
   --sbb-navigation-section-pointer-events: all;
 }
 
-:host(.sbb-navigation-section--opening) {
+:host([data-state='opening']) {
   --sbb-navigation-section-position: absolute;
 }
 
-:host(.sbb-navigation-section--opening),
-:host(.sbb-navigation-section--closing) {
+:host(:is([data-state='opening'], [data-state='closing'])) {
   --sbb-navigation-section-pointer-events: none;
 }
 
-:host(:not(.sbb-navigation-section--closed)) {
+:host(:not([data-state='closed'])) {
   display: block;
   inset: 0;
 }
@@ -108,7 +107,7 @@
     }
   }
 
-  :host(.sbb-navigation-section--closing) & {
+  :host([data-state='closing']) & {
     animation-name: close;
   }
 
@@ -125,8 +124,7 @@
   outline: none;
   overflow-y: auto;
 
-  :host(.sbb-navigation-section--opening) &,
-  :host(.sbb-navigation-section--closing) & {
+  :host(:is([data-state='opening'], [data-state='closing'])) & {
     --sbb-scrollbar-color: transparent;
 
     scrollbar-color: transparent transparent;
@@ -184,7 +182,7 @@
       property: opacity, transform;
     }
 
-    :host(.sbb-navigation-section--opened) & {
+    :host([data-state='opened']) & {
       opacity: 1;
       transform: translateY(0);
     }
@@ -195,7 +193,7 @@
     border-inline-start: var(--sbb-border-width-1x) solid var(--sbb-color-charcoal-default);
   }
 
-  :host(.sbb-navigation-section--closing) & {
+  :host([data-state='closing']) & {
     transition-delay: 0s;
   }
 }
