--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -163,12 +163,12 @@
 
 .sbb-button {
   @include sbb.button-reset;
-  @include sbb.stretch(width);
   @include sbb.text-xs--bold;
   @include sbb.font-smoothing;
 
   // Reset for link variant
   text-decoration: none;
+  width: 100%;
   position: relative;
   display: flex;
   gap: var(--sbb-button-gap);
