--- a/src/components/sbb-group/sbb-group.scss
+++ b/src/components/sbb-group/sbb-group.scss
@@ -49,7 +49,8 @@
 }
 
 .sbb-group {
-  @include sbb.stretch(height);
-  @include sbb.stretch(width);
   @include sbb.group;
+
+  height: 100%;
+  width: 100%;
 }
