--- a/src/components/sbb-signet/sbb-signet.scss
+++ b/src/components/sbb-signet/sbb-signet.scss
@@ -32,8 +32,8 @@
   justify-content: center;
   background-color: var(--sbb-signet-background-color);
   aspect-ratio: var(--sbb-signet-aspect-ratio);
-  @include sbb.stretch('height');
-  @include sbb.stretch('width');
+  width: 100%;
+  height: 100%;
 }
 
 .sbb-signet .sbb-signet__svg-container {
