--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -46,6 +46,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 @include sbb.hover-mq($hover: true) {
   :host(:hover) {
     --sbb-header-action-background-color: var(--sbb-color-milk-default);
+    --sbb-header-action-translate: #{sbb.px-to-rem-build(-1)};
   }
 }
 
@@ -78,6 +79,15 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   }
 }
 
+.sbb-header-action__icon,
+.sbb-header-action__text {
+  color: var(--sbb-color-black-default);
+  transform: translateY(var(--sbb-header-action-translate));
+  transition-property: transform;
+  transition-duration: var(--sbb-animation-duration-6x);
+  transition-timing-function: ease;
+}
+
 .sbb-header-action__icon {
   // Set stroke on header icons
   --sbb-icon-svg-stroke-color: currentcolor;
@@ -86,14 +96,12 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   min-width: var(--sbb-size-icon-ui-small);
   min-height: var(--sbb-size-icon-ui-small);
   line-height: 0;
-  color: var(--sbb-color-black-default);
 }
 
 .sbb-header-action__text {
   @include sbb.text-xs--bold;
 
   display: var(--sbb-header-action-text-display);
-  color: var(--sbb-color-black-default);
 }
 
 .sbb-header-action__opens-in-new-window {
