--- a/src/components/sbb-clock/sbb-clock.scss
+++ b/src/components/sbb-clock/sbb-clock.scss
@@ -5,11 +5,11 @@
 @include sbb.host-component-properties;
 
 :host {
-  --clock-hours-animation-start-angle: 0deg;
-  --clock-seconds-animation-start-angle: 0deg;
-  --clock-hours-animation-duration: 0s;
-  --clock-seconds-animation-duration: 0s;
-  --clock-animation-play-state: paused;
+  --sbb-clock-hours-animation-start-angle: 0deg;
+  --sbb-clock-seconds-animation-start-angle: 0deg;
+  --sbb-clock-hours-animation-duration: 0s;
+  --sbb-clock-seconds-animation-duration: 0s;
+  --sbb-clock-animation-play-state: paused;
 }
 
 .sbb-clock {
@@ -21,14 +21,12 @@
   contain: content;
 }
 
+.sbb-clock__face,
 .sbb-clock__hand-hours,
 .sbb-clock__hand-minutes,
 .sbb-clock__hand-seconds {
   position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   transform-origin: center center;
   transform: rotateZ(0deg);
   transform-style: preserve-3d;
@@ -48,13 +46,13 @@
   animation-duration: 43200s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
-  animation-play-state: var(--clock-animation-play-state);
+  animation-play-state: var(--sbb-clock-animation-play-state);
 }
 
 .sbb-clock__hand-hours--initial-hour {
   animation-name: hand-hours-animation-initial-hour;
-  animation-duration: var(--clock-hours-animation-duration);
-  animation-play-state: var(--clock-animation-play-state);
+  animation-duration: var(--sbb-clock-hours-animation-duration);
+  animation-play-state: var(--sbb-clock-animation-play-state);
   animation-iteration-count: 1;
 }
 
@@ -66,22 +64,22 @@
   animation-name: hand-seconds-animation;
   animation-duration: 60s;
   animation-timing-function: linear;
-  animation-play-state: var(--clock-animation-play-state);
+  animation-play-state: var(--sbb-clock-animation-play-state);
   animation-iteration-count: infinite;
   fill: var(--sbb-color-red-default);
 }
 
 .sbb-clock__hand-seconds--initial-minute {
   animation-name: hand-seconds-animation-initial-minute;
-  animation-duration: var(--clock-seconds-animation-duration);
-  animation-play-state: var(--clock-animation-play-state);
+  animation-duration: var(--sbb-clock-seconds-animation-duration);
+  animation-play-state: var(--sbb-clock-animation-play-state);
   animation-iteration-count: 1;
 }
 
-.sbb-clock--not-initialized .sbb-clock__hand-hours,
-.sbb-clock--not-initialized .sbb-clock__hand-minutes,
-.sbb-clock--not-initialized .sbb-clock__hand-seconds {
-  display: none;
+:is(.sbb-clock__hand-hours, .sbb-clock__hand-minutes, .sbb-clock__hand-seconds) {
+  :host(:not([data-initialized])) & {
+    display: none;
+  }
 }
 
 @keyframes rotate {
@@ -92,11 +90,11 @@
 
 @keyframes hand-hours-animation-initial-hour {
   0% {
-    transform: rotateZ(var(--clock-hours-animation-start-angle));
+    transform: rotateZ(var(--sbb-clock-hours-animation-start-angle));
   }
 
   100% {
-    transform: rotateZ(720deg);
+    transform: rotateZ(360deg);
   }
 }
 
@@ -113,7 +111,7 @@
 
 @keyframes hand-seconds-animation-initial-minute {
   0% {
-    transform: rotateZ(var(--clock-seconds-animation-start-angle));
+    transform: rotateZ(var(--sbb-clock-seconds-animation-start-angle));
   }
 
   97.5%,
